fixed tabled of contents and started adding double depth first search algorithm

--- a/BackgroundERTMS.tex
+++ b/BackgroundERTMS.tex
@@ -1,4 +1,5 @@
-\thesischapter{Background: The European Rail Traffic Management System}{The European Rail Traffic Management System}
+\thesischapter{Background: The European Rail Traffic Management System}{Background: The European Rail Traffic Management System}
+\chaptermark{The European Rail Traffic Management System}
 \label{chapter:ERTMS}
 
 Following the successful use of the solid state interlocking for over 30 years railway engineers are  employing modern technologies to develop a new kind of train control system.  Technologies such as GPS and mobile data communications, in the form of GSM radio,  allow for  a much finer grain of control than the traditional discrete solid state interlocking and  boolean track circuits alone would allow. 
