--- a/BackgroundSAT.tex
+++ b/BackgroundSAT.tex
@@ -1,4 +1,5 @@
-\thesischapter{Background: Resolution and the Satisfiability Problem}{Resolution and the Satisfiability Problem}
+\thesischapter{Background: Resolution and the Satisfiability Problem}{Background: Resolution and the Satisfiability Problem}
+\chaptermark{Resolution and the Satisfiability Problem}
 \label{chapter:satbackground}
 In the following we shall present the satisfiability problem and  algorithms which solve this problem which are commonly known as SAT solvers. We are particularly interested in the Davis Putnam Logemann Loveland algorithm \cite{DPLL} which is an improvement of the first SAT solving algorithm by Davis and Putnam \cite{MD60}. Moving on from these early SAT algorithms, we shall introduce some more recent SAT algorithms that are improvements on the original DPLL algorithm and include optimisations such as \emph{clause learning}~\cite{MS99} and \emph{non-chronological back tracking} \cite{MM01}. Finally, we look at the resolution algorithm \cite{JR65}, which was directly inspired by the DPLL algorithm, and its associated proof system. The connection between these algorithms is so fundamental  that the DPLL proof system is equivalent to a restricted form of resolution namely \emph{tree resolution} \cite{JR68} and clause learning algorithms have been shown to implement \emph{general resolution} \cite{KP09}. A general introduction to the satisfiability problem and SAT solvers can be found in The Handbook of Satisfiability \cite{AB09b}.
 
