--- a/BackgroundTrad.tex
+++ b/BackgroundTrad.tex
@@ -1,4 +1,6 @@
-\thesischapter{Background: Traditional Railway Control Systems}{Traditional Railway Control Systems}
+\thesischapter{Background: Traditional Railway Control Systems}{Background: Traditional Railway Control Systems}
+\chaptermark{Traditional Railway Control Systems}
+
 The birth of the railways occurred in the 1800s and from that point until the present day they have experienced continual growth, change and development. In the beginning the burden of safety was placed solely on human shoulders and has since been placed on mechanical systems before finally being transferred to electronics systems that are in place guaranteeing safety today. In the following we shall present a brief history of the railway followed by information on our industrial partner Invensys Rail.  Following this general introduction we shall look into specific equipment found on the modern railway and other information needed to understand the domain. Most importantly we shall describe the Westrace interlocking, a modern system charged with guaranteeing safety on the railway, which is produced by Invensys. In the final part of this chapter we shall look at some previous work in this field.
 
 
@@ -449,9 +451,8 @@ is as follows:
     \end{tikzpicture}
   }
 \end{center}
-\label{fig:pelicanladder}
 \caption{The Entities Used In Ladder Logic}
-
+\label{fig:pelicanladder}
 \end{figure}
 
 \medskip
