--- a/Hybridautomata.tex
+++ b/Hybridautomata.tex
@@ -1,6 +1,7 @@
 
 
 \thesischapter{Formalising the European Rail Traffic Management System Using Hybrid Automata}{Formalising the European Rail Traffic Management System Using Hybrid Automata}
+\chaptermark{Formalising ERTMS using Hybrid Automata}
 \label{chap:hybrid}
 The ERTMS system will be central to many train control systems in the future and ensuring that it is safe is of paramount importance. It poses a particular challenge due to the fact that the system is specified at a high level with each individual country having its own particular implementation. One aspect that is particularly problematic and loosely specified is the interface between the existing interlocking and the RBC as both of these systems have a role to play in ensuring safety. In the following chapter we shall look at formalising the ERTMS system whilst capturing the behaviour of this critical interface between the two systems. 
 
