--- a/Maude.tex
+++ b/Maude.tex
@@ -1,7 +1,7 @@
 \newcommand{\rtmaude}{Real Time Maude}
 
-\thesischapter{The Modelling of the European Rail Traffic Management System Using Real Time Maude}{The Modelling of ERTMS Using Real Time Maude}\label{chap:modelertms}
-
+\thesischapter{The Modelling of the European Rail Traffic Management System Using Real Time Maude}{The Modelling of the European Rail Traffic Management System Using Real Time Maude}\label{chap:modelertms}
+\chaptermark{Modelling ERTMS Using Real Time Maude}
 In the following we present the Maude \cite{MC03,Maude} and Real Time Maude \cite{PO02,PO04,RTMaude} tools and describe how they can be used model the ERTMS system (See chapter \ref{chapter:ERTMS}).   We begin by giving a general introduction to Maude and Real Time Maude and then describe how each of the three subsystems (trains, the interlocking and the RBC) are specified following the hybrid automata formalisation found in chapter \ref{chap:hybrid}. Each of these individual components is modelled as an object oriented specification. We define classes representing each of the subsystems and then rewrite rules are used to give objects behaviour. The  built-in message construct of the Real Time Maude system is used to define communication between the subsystems. 
 
 \subsection*{Related Work}
