--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -15,7 +15,8 @@
 \newcommand{\clmodres}[2]{\overset{#1;#2}{\underset{URes}{\vdash}}}
 
 
-\thesischapter{Extracting a Conflict Driven Clause Learning SAT Algorithm}{Extracting a CDCL SAT Algorithm} \label{chapter:cdclproof}
+\thesischapter{Extracting a Conflict Driven Clause Learning SAT Algorithm}{Extracting a Conflict Driven Clause Learning SAT Algorithm} \label{chapter:cdclproof}
+\chaptermark{Extracting a CDCL SAT Algorithm}
 In the following chapter we shall describe how a conflict driven clause learning SAT algorithm can be extracted from a modified DPLL proof system (see chapter \ref{chapter:dpll}) in combination with a modified unit resolution proof system. The $\Conflict$ rule is modified such that a clause is learned and stored as part of the sequent. The $\Split$ rule allows for these learned clauses to be transferred up the first branch of the proof tree and then used in the proof search of the next branch. This has the implication that the $\Split$ rule is no longer symmetric and has a more imperative nature. The unit resolution proof system has been modified so that it captures the behaviour  of the conflict graph (See chapter \ref{chapter:satbackground}.). We define a property which captures a complete\footnote{This is not completeness in the proof theoretic sense but in the sense that the set contains the right number of clauses  and that they come with associated unit resolution proofs} set of unit resolution derived clauses with respect to a valuation such that each resolved clause has a unit resolution derivation from a clause in the original formula. The extracted program makes use of these clauses during the search for a satisfying assignment. If this set of clauses becomes empty then the current valuation forms a model of the formula. An occurrence of the empty clause in this set of clauses indicates that a conflict has a occurred and a clause is learned and passed up the branch of the proof search. In order to facilitate clause learning, the valuations used in this proof have a modification to store the rule and level at which a literal has been added. 
 
 
@@ -90,6 +91,8 @@ $\forall D,l,n,n'( (D \, l \, n) \in \Gamma \wedge (D \, l \, n') \in \Gamma \to
 \end{enumerate}
 \end{mydef}
 \hspace{1mm} \\
+
+\section{Modified Proof Systems}
 %
 The modified DPLL proof system retains the $\Split$, $\Conflict$ and $\Unit$ rules in a modified form, however the $\Elim$ and $\Red$ rules have been replaced by a modified unit resolution proof system. The DPLL derivation relation has an additional argument placed under the turnstyle $\vdash_{\Delta'}$ which is used to capture the transfer of learned clauses up through the proof tree towards the root. The manipulation of individual clauses in the formula to be solved is carried out using the unit resolution proof system. When a derivation of a unit clause or empty clause is discovered during the unit resolution proof search this proof is plugged into the appropriate DPLL rule. \\
 \medskip
@@ -371,6 +374,8 @@ We have two sets of learned clauses $\Delta'$ and $\Delta''$ which do not contai
 
 \end{comment}
 
+\section{Storing Unit Resoltion Derived Clauses}
+
 We now define a complete set of clause pairs $\DeltaVec$ such the the first component in each pair is contained within $\Delta$ and the second component is derived by the first via unit resolution to such an extent that it no longer contains any variables in common with $\Gamma$. \\
 \medskip
 \begin{mydef}
@@ -490,6 +495,9 @@ By Lemma \ref{lem:comprem} $\complete{\DeltaVec_1'}{\Gamma}{\Delta_1 \setminus C
 \end{description}
 \end{mylemma}
 \medskip
+
+\section{Completeness of the Modified DPLL Proof System}
+
 We now proceed to the Main proof of completeness in which we maintain a complete set of clause pairs and unit resolution derivations with respect to the current valuation and formula. We call $n \leq \delta(\Gamma)$  the "witness", it provides us with a DPLL derivation of unsatisfiability using the valuation $\Gamma$ cropped to a decision level $n$.\\
 \medskip
 \begin{mytheorem}[Completeness of Modified DPLL] 
