--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -200,7 +200,7 @@ This process of model checking linear temporal logic involves first  negating th
 \subsection{B{\"u}chi Automata}
 \newcommand{\Buchi}{B{\"u}chi\xspace}
 Most applications of model checking typically search for a finite counterexample trace in the set of infinite traces of the system. The class of automatons which can accept infinite words is called the $\omega$-automata and the simplest class $\omega-automata$ is \Buchi automata. These \Buchi automata are a minor modification of finite state automata in that they have a finite alphabet and a finite set of states but instead of a set of final states the automata have a set of \emph{accepting states}.
-
+\medskip
 \begin{mydef}[B{\"u}chi Automata]
 We define a \Buchi automaton $A$ is a five-tuple $(L, S,T,S_0, F)$ where:
 \item $L$ is a finite alphabet
@@ -220,14 +220,39 @@ The translation of the LTL property into a \Buchi automaton takes three steps fo
 
 At every step the automaton is simplified by removing unreachable states and subsumed transitions and combining equivalent states. In order to perform model checking we need to be able to find accepting runs of the automaton. Since these accepting runs are infinite they must contain a loop through the automaton. Therefore the model checking algorithm partitions the \Buchi automaton into its strongly connected components. A set of states in a \Buchi automaton is a \emph{strongly connected component} (SCC) if and only if every state in that set is reachable from every other state in that set. 
 
-The model checking algorithm performs a search, using the double depth first search algorithm, for strongly connected components and tests to see whether the the acceptance condition is empty. The following is the double depth first search algorithm as formulated in \cite{EMC99}:
+The model checking algorithm performs a search, using the double depth first search algorithm, for strongly connected components in a \Buchi automataon $A = (L,S,T, S_0, F)$ and tests to see whether the the acceptance condition is empty. Let $\rho$ be an accepting run of the automaton i.e. it contains infinitely many accepting states from $A$.  There must exist some $\rho'$, which is a suffix of $\rho$, such that every state within $\rho'$ occurs infinitely often in $\rho'$. These states of $\rho'$ form a strongly connected component as every state must be reachable from every other state. The converse also holds meaning that a search algorithm for strongly connected components also checks for accepting runs of the automata.The following is the double depth first search algorithm as formulated in \cite{EMC99}:
 
-\begin{lstlisting}
+\begin{lstlisting}[caption = The double depth first search algorithm, mathescape]
+Emptiness(A)
 
+$\forall s_0 \in S_0$ do
+	dfs1(s_0,A,HT)
+terminate(False);
+
+dfs1(s, A,HT)
+Stack Stack1 := empty
+Hashtable HT1 := empty
+push(s,Stack1)
+insert(s,HT`)
+$\forall s' \in S. T(s,s')$ do
+	if $s' \notin HT$ then dfs1(s')
+if accept(s) then dfs2(s)
+pop(Stack1)
+
+dfs2(s)
+Stack Stack2 := empty
+Hashtable HT2 := empty
+push(s,Stack2)
+$\forall s' \in S.T(s,s')$ do
+	if $s' \in Stack1$ return(True)
+	else if(s' \nottin Table1 then dfs2(s')
+ pop(Stack2)
+
+insert
 
 \end{lstlisting}
 
-\textbf{Note to self: Define double depth first search and possibly fairly strongly connected components}
+\textbf{Note to self: Do we need hash tables in this and possibly fairly strongly connected components}
 
 
 
