--- a/lit.bib
+++ b/lit.bib
@@ -895,6 +895,17 @@
   timestamp = {2014.04.29}
 }
 
+@INPROCEEDINGS{GH96,
+  author = {Holzmann, G. J. and Peled, D. and Yannakakis, M.},
+  title = {On Nested Depth First Search},
+  booktitle = {Second {SPIN} workshop},
+  year = {1996},
+  pages = {23--32},
+  publisher = {AMS},
+  owner = {andylawrence},
+  timestamp = {2014.08.17}
+}
+
 @ARTICLE{WH80,
   author = {Howard, W. A.},
   title = {The formulae-as-types notion of construction},
