--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -564,6 +564,71 @@ This is proven by using Lemma \ref{lem:compgen} to generate a complete set of cl
 \end{proof}
 \end{mycorollary}
 
+\section{Formalising a Soudness and Completeness of the Modified DPLL and Resolution Proof Systems in Minlog}
+
+\section{Behaviour of Prototype Clause Learning Algorithm}
+In the following we shall describe the behaviour of the prototype clause learning algorithm when applied to some simple examples. This prototype has had $\forallnc$ quantifiers inserted to reduce the amount of redundant computational content and the overall size of the proof generated. We can apply the solver to a small example formula containing two unit clauses as follows:
+
+\begin{center}\texttt{(term-to-string (nt (make-term-in-app-form program (pt "(CF ((CC (Pos (Variable 11)):)::(CC (Pos (Variable 12)):):)) "))))}
+\end{center}
+
+The solver produces a model of the formula paired with a function which indicates which literal satisfies which individual clause:
+
+\begin{center}
+\texttt{"(InL (lit=>boole)@@(cla=>lit) for@@algmodDPLL)(([l0][if (l0=Pos(Variable 12)) True (l0=Pos(Variable 11))])@([c0][if (c0=CC(Pos(Variable 12)):) (Pos(Variable 12)) [if (c0=CC(Pos(Variable 11)):) (Pos(Variable 11)) (Pos(Variable 0))]]))"}                                                                      
+\end{center}
+
+We modelled the completeness statement of this solver using Minlog's built in inductively defined disjunction \texttt{ori}. The constructors \texttt{InL} and \texttt{InR} capture the extracted computation content of the left and right hand of the disjunction respectively. We have also applied to solver to several unsatisfiable examples. The prototype clause learning algorithm is applied to the pigeon hole formula PHP(3,2) using the following command:
+
+\begin{center}
+\texttt{
+(pp (nt (mk-term-in-app-form program (pt "(CF (                                                                
+(CC ((Pos (Variable11))::(Pos (Variable12)):))::(CC ((Pos (Variable21))::(Pos (Variable22)):))::(CC ((Pos (Variable31))::(Pos (Variable32)):))::(CC ((Neg (Variable11))::(Neg (Variable21)):))::(CC ((Neg (Variable11))::(Neg (Variable31)):))::(CC ((Neg (Variable21))::(Neg (Variable31)):))::(CC ((Neg (Variable12))::(Neg (Variable22)):))::(CC ((Neg (Variable12))::(Neg (Variable32)):))::(CC ((Neg (Variable22))::(Neg (Variable32)):)):) )") )))}
+\end{center}
+
+This results in the following output:
+\begin{lstlisting}
+(InR for@@algmodDPLL (lit=>boole)@@(cla=>lit))
+(CF(CC(Nil lit)::(CC(Neg(Variable 32)):):)@
+CmodDPLLTwo(Pos(Variable 32))
+(CmodDPLLOne(Neg(Variable 12))
+(CunitResThree(Neg(Variable 32))(CunitResTwo(Pos(Variable 32))1)
+(CunitResZero(CC(Neg(Variable 12)::(Neg(Variable 32)):))))
+(CmodDPLLOne(Pos(Variable 11))
+(CunitResThree(Pos(Variable 12))(CunitResOne(Neg(Variable 12))1)
+(CunitResZero(CC(Pos(Variable 11)::(Pos(Variable 12)):))))
+(CmodDPLLOne(Neg(Variable 21))
+(CunitResThree(Neg(Variable 11))(CunitResOne(Pos(Variable 11))1)
+(CunitResZero(CC(Neg(Variable 11)::(Neg(Variable 21)):))))
+(CmodDPLLOne(Pos(Variable 22))
+(CunitResThree(Pos(Variable 21))(CunitResOne(Neg(Variable 21))1)
+(CunitResZero(CC(Pos(Variable 21)::(Pos(Variable 22)):))))
+(CmodDPLLZero
+(CunitResThree(Neg(Variable 22))(CunitResOne(Pos(Variable 22))1)
+(CunitResThree(Neg(Variable 32))(CunitResTwo(Pos(Variable 32))1)
+(CunitResZero(CC(Neg(Variable 22)::(Neg(Variable 32)):))))))))))
+(CmodDPLLOne(Pos(Variable 31))
+(CunitResThree(Pos(Variable 32))(CunitResTwo(Neg(Variable 32))1)
+(CunitResZero(CC(Pos(Variable 31)::(Pos(Variable 32)):))))
+(CmodDPLLOne(Neg(Variable 11))
+(CunitResThree(Neg(Variable 31))(CunitResOne(Pos(Variable 31))1)
+(CunitResZero(CC(Neg(Variable 11)::(Neg(Variable 31)):))))
+(CmodDPLLOne(Pos(Variable 12))
+(CunitResThree(Pos(Variable 11))(CunitResOne(Neg(Variable 11))1)
+(CunitResZero(CC(Pos(Variable 11)::(Pos(Variable 12)):))))
+(CmodDPLLOne(Neg(Variable 21))
+(CunitResThree(Neg(Variable 31))(CunitResOne(Pos(Variable 31))1)
+(CunitResZero(CC(Neg(Variable 21)::(Neg(Variable 31)):))))
+(CmodDPLLOne(Pos(Variable 22))
+(CunitResThree(Pos(Variable 21))(CunitResOne(Neg(Variable 21))1)
+(CunitResZero(CC(Pos(Variable 21)::(Pos(Variable 22)):))))
+(CmodDPLLZero
+(CunitResThree(Neg(Variable 22))(CunitResOne(Pos(Variable 22))1)
+(CunitResThree(Neg(Variable 12))(CunitResOne(Pos(Variable 12))1)
+(CunitResZero(CC(Neg(Variable 12)::(Neg(Variable 22)):))))))))))))
+\end{lstlisting}
+
+Here we see that the solver has learned two clauses. The clause \texttt{(CC (Neg (Variable 32)):)} comes from the first branch of the proof where the literal \texttt{(Pos (Variable 32))} was used in an application of the $\Split$ rule. This learned unit clause was then used in subsequent unit resolution derivations of the second branch of the proof resulting in the empty clause \texttt{CC(Nil lit)} being learned.  This use of the unit clauses before assignments from the $\Split$ rule results in shorter learned clauses which better aid the subsequent proof search.
 
 
 
