--- a/Main.tex
+++ b/Main.tex
@@ -406,7 +406,7 @@ Signed:
 
 \input{ECLSA.tex}
 
-\input{minlogcdcl.tex}
+%%%\input{minlogcdcl.tex}
 
 
 \input{BackgroundTrad.tex}
@@ -414,7 +414,7 @@ Signed:
 
 \input{BackgroundModelChecking.tex}
 
-\input{VerifyingSSI.tex}
+%%%\input{VerifyingSSI.tex}
 
 \input{BackgroundERTMS.tex}
 
