--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -245,7 +245,7 @@ push(s,Stack2)
 insert(s,HT2)
 $\forall s' \in S.T(s,s')$ do
 	if $s' \in \mathrm{Stack1}$ return(True)
-	else if $s' \nottin \mathrm{HT2}$ then dfs2(s')
+	else if $s' \notin \mathrm{HT2}$ then dfs2(s')
 pop(Stack2)
 \end{lstlisting}
 
