--- a/lit.bib
+++ b/lit.bib
@@ -1749,6 +1749,20 @@
   publisher = {Springer-Verlag}
 }
 
+@INPROCEEDINGS{WK98,
+  author = {Weich, K.},
+  title = {Decision Procedures for Intuitionistic Propositional Logic by Program
+	Extraction},
+  booktitle = {TABLEAUX'98},
+  year = {1998},
+  volume = {1397},
+  series = {Lecture Notes in Artificial Intelligence},
+  pages = {292--306},
+  publisher = {Springer Berlin / Heidelberg},
+  owner = {andylawrence},
+  timestamp = {2014.08.19}
+}
+
 @ARTICLE{CW97,
   author = {Weidenbach, C.},
   title = {SPASS - Version 0.49},
