--- a/minlogdpll.tex
+++ b/minlogdpll.tex
@@ -486,8 +486,7 @@ In the following we will see how both $\forall$ and $\forallnc$ solvers
 behave when they are applied to a number of SAT problems. The extracted 
 decision procedure was run on several instances of the pigeon hole 
 principle \cite{SC79} in both Minlog and as Haskell programs. The pigeon hole principle states that there is 
-no injective function that maps 
-
+no injective function that maps $\{ 1, 2 \ldots , n \}$ to $\{1,2, \ldots, n-1 \}$.
 
 \begin{mydef}[Pigeon Hole Formula]
 $\mathbf{PHP}(n,m) := \{\{l_{i,1},\ldots,l_{i,m}\} | 1 \leq i \leq n  \} \cup \{ \{\mybar {l_{i,k}},\mybar{ l_{j,k}}\} | 1 \leq i < j \leq n, 1 \leq k \leq m \}  $
