--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -467,16 +467,16 @@ We begin the proof by performing induction on the proof term M.
      corresponding to the existential introduction axiom.
 
      $$(\lambda x x) \textbf{r}  \forall^{nc} \vec{\rho} \forall x. A \to
-  \exists x A  \eq  \forall^{nc} \vec{\rho} \forall x.x \textbf{r} (A \to
+  \exists x A  =  \forall^{nc} \vec{\rho} \forall x.x \textbf{r} (A \to
   \exists x A) $$
 
   Since $\tau (A) = \epsilon$ the empty program realises A.
   $$\forall^{nc} \vec{\rho} \forall x.x \textbf{r} (A \to
-  \exists x A )  \eq \forall^{nc} \vec{\rho} \forall x.\epsilon \textbf{r} A \to
+  \exists x A )  = \forall^{nc} \vec{\rho} \forall x.\epsilon \textbf{r} A \to
   x \textbf{r} \exists x A $$
 
   $$\forall^{nc} \vec{\rho} \forall x.\epsilon \textbf{r} A \to
-  x \textbf{r} \exists x A \eq \forall^{nc} \vec{\rho} \forall x.\epsilon \textbf{r} A \to
+  x \textbf{r} \exists x A = \forall^{nc} \vec{\rho} \forall x.\epsilon \textbf{r} A \to
   \epsilon \textbf{r}  A $$
 
    \item[Subcase] $\tau (A) \neq \epsilon$ If the type of A is non empty then
@@ -488,7 +488,7 @@ We begin the proof by performing induction on the proof term M.
    \langle x ,f \rangle \textbf{r} \exists x A $$
 
        $$ \forall^{nc} \vec{\rho} \forall x,f. f \textbf{r} A \to
-   \langle x ,f \rangle \textbf{r} \exists x A  \eq \forall^{nc} \vec{\rho} \forall x,f. f \textbf{r} A \to
+   \langle x ,f \rangle \textbf{r} \exists x A  = \forall^{nc} \vec{\rho} \forall x,f. f \textbf{r} A \to
    f \textbf{r} A  $$
   \end{description}
 
@@ -499,18 +499,18 @@ We begin the proof by performing induction on the proof term M.
     our theorem we need to find a derivation of $$\llbracket
     \exists^-_{x,A,B} \rrbracket \textbf{r} \forall^{nc} \vec{\rho}. \exists
     x A \to (\forall x. A \to B) \to B$$
-    \item[Subcase] $\tau (A) \eq \epsilon \eq \tau (B)$ The extracted program
+    \item[Subcase] $\tau (A) = \epsilon = \tau (B)$ The extracted program
       in this case is the empty program that is $ \llbracket \exists^-_{x,A,B}
       \rrbracket = \epsilon $
 
       $$\epsilon \textbf{r} \forall^{nc} \vec{\rho}. \exists
        x A \to (\forall x. A \to B) \to B 
-      \eq \forall^{nc} \vec{\rho} \forall x. x \textbf{r} \exists x A \to \epsilon \textbf{r}((\forall x. A \to B) \to B) 
-      \eq \forall^{nc} \vec{\rho} \forall x. \epsilon \textbf{r} A \to
+      = \forall^{nc} \vec{\rho} \forall x. x \textbf{r} \exists x A \to \epsilon \textbf{r}((\forall x. A \to B) \to B) 
+      = \forall^{nc} \vec{\rho} \forall x. \epsilon \textbf{r} A \to
       \epsilon \textbf{r}(\forall x. A \to B) \to \epsilon \textbf{r} B  
-      \eq \forall^{nc} \vec{\rho} \forall x. \epsilon \textbf{r} A \to
+      = \forall^{nc} \vec{\rho} \forall x. \epsilon \textbf{r} A \to
       \forall x \epsilon \textbf{r}(A \to B) \to \epsilon \textbf{r} B
-      \eq \forall^{nc} \vec{\rho} \forall x. \epsilon \textbf{r} A \to
+      = \forall^{nc} \vec{\rho} \forall x. \epsilon \textbf{r} A \to
       (\forall x. \epsilon \textbf{r} A \to \epsilon \textbf{r} B) \to
       \epsilon \textbf{r} B$$
 
